# SCUQ-RRG

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example/: VRO_GREEN_demo.ipynb  VRO_Rad_demo.ipynb  quickstart.ipynb
scuq/: __init__.py  abstention.py  utils.py
scuq/calibration/: __init__.py  rank_calibration.py
scuq/uq/: __init__.py  baselines.py  report_uq.py  sentence_uq.py
src/abstention/: report_abstention.py
src/misc/: cal_rce.py
src/uq/: VroGreen.py  VroRadSent.py
