[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scuq-rrg"
version = "1.0.1"
description = "Semantic Consistency-Based Uncertainty Quantification for Radiology Report Generation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Chenyu Wang" }
]
keywords = [
    "uncertainty quantification",
    "radiology report generation",
    "natural language processing",
    "medical AI",
    "GREEN",
    "RadGraph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "tokenizers>=0.19",
    "pandas>=1.5",
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "tqdm>=4.60",
    "nltk>=3.8",
]

[project.optional-dependencies]
# pip install scuq-rrg[radgraph]
radgraph = ["radgraph>=0.0.9"]
# green_score must be installed from the submodule (PyPI version is incompatible):
#   pip install -e third_party/GREEN/
lexical = ["pycocoevalcap"]

[project.urls]
Homepage = "https://github.com/Heimerd1nger/SCUQ-RRG"
Paper    = "https://arxiv.org/abs/2412.04606"
Issues   = "https://github.com/Heimerd1nger/SCUQ-RRG/issues"

[tool.setuptools.packages.find]
include = ["scuq*"]
exclude = ["src*", "example*", "third_party*"]
